--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
 		integrity="sha384-pPttEvTHTuUJ9L2kCoMnNqCRcaMPMVMsWVO+RLaaaYDmfSP5//dP6eKRusbPcqhZ" 
 		crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
 	<meta name="autocomplete" content="off"/>
 </head>
 <body>
@@ -215,6 +215,6 @@
 		</nav>
 	</div>
 	
-	<script src="main.js" type="text/javascript"></script>
+	<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
