--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="#main" id="defaultClick">메인</a></li>
 						<li><a href="#jobs">내 직업</a></li>
 						<li><a href="#status">내 스탯</a></li>
-						<li><a href="#item">내 아이템</a></li>
+						<li><a href="#equip">내 아이템</a></li>
 						<li><a href="#vmatrix">V 매트릭스</a></li>
 						<li><a href="#union">메이플 유니온</a></li>
 						<li><a href="#report">DPM 정보</a></li>
@@ -83,74 +83,74 @@
 				<tbody>
 					<tr>
 						<td rowspan="3">모험가</td>
-						<td><button type="button" class="btn btn-primary" name="hero">히어로</button></td>
-						<td><button type="button" class="btn btn-primary" name="arcmagefire">아크메이지(불,독)</button></td>
-						<td><button type="button" class="btn btn-primary" name="bowmaster">보우마스터</button></td>
-						<td><button type="button" class="btn btn-primary" name="nightlord">나이트로드</button></td>
-						<td><button type="button" class="btn btn-primary" name="viper">바이퍼</button></td>
+						<td><button type="button" class="btn btn-default" name="hero">히어로</button></td>
+						<td><button type="button" class="btn btn-default" name="arcmagefire">아크메이지(불,독)</button></td>
+						<td><button type="button" class="btn btn-default" name="bowmaster">보우마스터</button></td>
+						<td><button type="button" class="btn btn-default" name="nightlord">나이트로드</button></td>
+						<td><button type="button" class="btn btn-default" name="viper">바이퍼</button></td>
 					</tr>
 					<tr>
-						<td><button type="button" class="btn btn-primary" name="paladin">팔라딘</button></td>
-						<td><button type="button" class="btn btn-primary" name="arcmagecold">아크메이지(썬,콜)</button></td>
-						<td><button type="button" class="btn btn-primary" name="marksman">신궁</button></td>
-						<td><button type="button" class="btn btn-primary" name="shadower">섀도어</button></td>
-						<td><button type="button" class="btn btn-primary" name="captain">캡틴</button></td>
+						<td><button type="button" class="btn btn-default" name="paladin">팔라딘</button></td>
+						<td><button type="button" class="btn btn-default" name="arcmagecold">아크메이지(썬,콜)</button></td>
+						<td><button type="button" class="btn btn-default" name="marksman">신궁</button></td>
+						<td><button type="button" class="btn btn-default" name="shadower">섀도어</button></td>
+						<td><button type="button" class="btn btn-default" name="captain">캡틴</button></td>
 					</tr>
 					<tr>
-						<td><button type="button" class="btn btn-primary" name="darkknight">다크나이트</button></td>
-						<td><button type="button" class="btn btn-primary" name="bishop">비숍</button></td>
+						<td><button type="button" class="btn btn-default" name="darkknight">다크나이트</button></td>
+						<td><button type="button" class="btn btn-default" name="bishop">비숍</button></td>
 						<td></td>
-						<td><button type="button" class="btn btn-primary" name="duelblade">듀얼블레이드</button></td>
-						<td><button type="button" class="btn btn-primary" name="cannonshootter">캐논슈터</button></td>
+						<td><button type="button" class="btn btn-default" name="duelblade">듀얼블레이드</button></td>
+						<td><button type="button" class="btn btn-default" name="cannonshootter">캐논슈터</button></td>
 					</tr>
 					<tr>
 						<td rowspan="2">시그너스 기사단</td>
-						<td><button type="button" class="btn btn-primary" name="soulmaster">소울마스터</button></td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="flamewizard">플레임위자드</button></td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="windbreaker">윈드브레이커</button></td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="nightwalker">나이트워커</button></td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="striker">스트라이커</button></td>
+						<td><button type="button" class="btn btn-default" name="soulmaster">소울마스터</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="flamewizard">플레임위자드</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="windbreaker">윈드브레이커</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="nightwalker">나이트워커</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="striker">스트라이커</button></td>
 					</tr>
 					<tr>
-						<td><button type="button" class="btn btn-primary" name="michael">미하일</button></td>
+						<td><button type="button" class="btn btn-default" name="michael">미하일</button></td>
 					</tr>
 					<tr>
 						<td rowspan="2">영웅</td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="aran">아란</button></td>
-						<td><button type="button" class="btn btn-primary" name="evan">에반</button></td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="mercedes">메르세데스</button></td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="phantom">팬텀</button></td>
-						<td rowspan="2"><button type="button" class="btn btn-primary" name="shade">은월</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="aran">아란</button></td>
+						<td><button type="button" class="btn btn-default" name="evan">에반</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="mercedes">메르세데스</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="phantom">팬텀</button></td>
+						<td rowspan="2"><button type="button" class="btn btn-default" name="shade">은월</button></td>
 					</tr>
 					<tr>
-						<td><button type="button" class="btn btn-primary" name="luminous">루미너스</button></td>
+						<td><button type="button" class="btn btn-default" name="luminous">루미너스</button></td>
 					</tr>
 					<tr>
 						<td rowspan="3">레지스탕스</td>
-						<td><button type="button" class="btn btn-primary" name="blaster">블래스터</button></td>
-						<td rowspan="3"><button type="button" class="btn btn-primary" name="battlemage">배틀메이지</button></td>
-						<td rowspan="3"><button type="button" class="btn btn-primary" name="wildhunter">와일드헌터</button></td>
+						<td><button type="button" class="btn btn-default" name="blaster">블래스터</button></td>
+						<td rowspan="3"><button type="button" class="btn btn-default" name="battlemage">배틀메이지</button></td>
+						<td rowspan="3"><button type="button" class="btn btn-default" name="wildhunter">와일드헌터</button></td>
 						<td></td>
-						<td><button type="button" class="btn btn-primary" name="mechanic">메카닉</button></td>
+						<td><button type="button" class="btn btn-default" name="mechanic">메카닉</button></td>
 					</tr>
 					<tr>
-						<td><button type="button" class="btn btn-primary" name="demonslayer">데몬슬레이어</button></td>
-						<td rowspan="2" colspan="2"><button type="button" class="btn btn-primary" name="xenon">제논</button></td>
+						<td><button type="button" class="btn btn-default" name="demonslayer">데몬슬레이어</button></td>
+						<td rowspan="2" colspan="2"><button type="button" class="btn btn-default" name="xenon">제논</button></td>
 					</tr>
 					<tr>
-						<td><button type="button" class="btn btn-primary" name="demonavenger">데몬어벤져</button></td>
+						<td><button type="button" class="btn btn-default" name="demonavenger">데몬어벤져</button></td>
 					</tr>
 					<tr>
 						<td>노바</td>
-						<td><button type="button" class="btn btn-primary" name="kaiser">카이저</button></td>
+						<td><button type="button" class="btn btn-default" name="kaiser">카이저</button></td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td><button type="button" class="btn btn-primary" name="angelicbuster">엔젤릭버스터</button></td>
+						<td><button type="button" class="btn btn-default" name="angelicbuster">엔젤릭버스터</button></td>
 					</tr>
 					<tr>
 						<td>신의 아이</td>
-						<td><button type="button" class="btn btn-primary" name="zero">제로</button></td>
+						<td><button type="button" class="btn btn-default" name="zero">제로</button></td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -159,7 +159,7 @@
 					<tr>
 						<td>타고난 천재 영웅</td>
 						<td></td>
-						<td><button type="button" class="btn btn-primary" name="kinesys">키네시스</button></td>
+						<td><button type="button" class="btn btn-default" name="kinesys">키네시스</button></td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -169,20 +169,32 @@
 			
 		</div>
         <div class="tab_item" id="status">
-            기초스탯<br>
+            <h2>레벨로 올라가는 스탯들을 다룹니다.</h2><br>
 			<form name="basestat">
-			주스탯 : <input type="text" name="mainstat" value="40"><br>
-			부스탯 : <input type="text" name="substat" value="4"><br>
-			공 : <input type="text" name="att" value="15"><br>
+			레벨 : <input type="number" name="lev" autocomplete="off" onkeyup="calclevelstat();" value="200"><br>
+			<script>
+			function calclevelstat(){
+				if(1){
+				document.basestat.mainstat.value = (document.basestat.lev.value*5)+18;
+				}
+			}
+			</script>
+			순 주스탯 : <input type="number" name="mainstat" autocomplete="off" value="1018" readonly><br>
+			순 부스탯 : <input type="number" name="substat" autocomplete="off" value="4" readonly><br>
+			<h3>하이퍼 스탯</h3><br>
+			
 			</form>
         </div>
-        <div class="tab_item" id="item">
-            스공뻥요소<br>
-			<form name="mult">
-			공퍼(% 단위, 30%라면 30) : <input type="text" name="att" value="0"><br>
-			주스탯퍼(%단위, 200%라면 200) : <input type="text" name="mainstat" value="0"><br>
-			부스탯퍼(%단위, 200%라면 200) : <input type="text" name="substat" value="0"><br>
-			올스탯퍼(%단위, 200%라면 200) : <input type="text" name="allstat" value="0"><br>
+        <div class="tab_item" id="equip">
+            <h2>아이템으로 인해 올라가는 스탯들을 다룹니다.</h2><br>
+			<form name="itemstat">
+			공 : <input type="number" name="att" autocomplete="off" value="15"><br>
+			주스탯 : <input type="number" name="mainstat" autocomplete="off" value="0"><br>
+			부스탯 : <input type="number" name="substat" autocomplete="off" value="0"><br>
+			공퍼(% 단위, 30%라면 30) : <input type="number" name="attp" autocomplete="off" value="0">%<br>
+			주스탯퍼(%단위, 200%라면 200) : <input type="number" name="mainstatp" autocomplete="off" value="0">%<br>
+			부스탯퍼(%단위, 200%라면 200) : <input type="number" name="substatp" autocomplete="off" value="0">%<br>
+			올스탯퍼(%단위, 200%라면 200) : <input type="number" name="allstatp" autocomplete="off" value="0">%<br>
 			</form>
         </div>
 		<div class="tab_item" id="vmatrix">
@@ -191,16 +203,18 @@
 		<div class="tab_item" id="union">
 			고정스탯<br>
 			<form name="fixed">
-			고정공 : <input type="text" name="att" value="0"><br>
-			고정주스탯 : <input type="text" name="mainstat" value="0"><br>
-			고정주스탯 : <input type="text" name="substat" value="0"><br>
+			고정공 : <input type="number" name="att" autocomplete="off" value="0"><br>
+			고정주스탯 : <input type="number" name="mainstat" autocomplete="off" value="0"><br>
+			고정주스탯 : <input type="number" name="substat" autocomplete="off" value="0"><br>
 			</form>
 		</div>
 		<div class="tab_item" id="report">
 			내 스공은 올마??
 			<form name="reports">
-			스탯계수 : <input type="text" name="totalstat" value="0"><br>
-			공격력합 : <input type="text" name="totalatt" value="0">
+			스탯계수 : <input type="number" name="totalstat" value="0" readonly><br>
+			공격력합 : <input type="number" name="totalatt" value="0" readonly><br>
+			디버그1 : <input type="text" name="d1" value="0" readonly><br>
+			디버그2 : <input type="text" name="d2" value="0" readonly><br>
 			</form>
 		</div>
 		
