--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 		</button>
-        <h4 class="modal-title" id="myModalLabel">누가 만들었나</h4>
+        <h4 class="modal-title" id="myModalLabel">누가 만들었나?</h4>
 		</div>
 		<div class="modal-body">
-		<p>저예용 저라구용 만든사람은 바로 저 김석민입니다</p>
+		<img src=soondooking.png>
+		<p>순두킹@크로아가 만들었음</p>
+		<p>음식에 되도록이면 소스를 뿌리지 않는 걸 좋아함</p>
+		<p>너무 꼬1치꼬1치 캐묻다간 경찰서!!!!!에 갈 수 있으니 조심하자</p>
 		<a href=http://blog.naver.com/skeldk2>http://blog.naver.com/skeldk2</a>
 		</div>
 		<div class="modal-footer">
