--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 				<ul class="nav navbar-nav">
 					<li><a href="#main" id="defaultClick">메인</a></li>
 					<li><a href="#jobs">직업</a></li>
-					<li><a href="#status">기본 스탯</a></li>
-					<li><a href="#buff">버프/도핑</a></li>
+					<li><a href="#status">기본 스탯/어빌리티</a></li>
+					<li><a href="#buff">버프/도핑/링크 스킬</a></li>
 					<li><a href="#equip">장비 아이템</a></li>
 					<li><a href="#vmatrix">V 매트릭스</a></li>
 					<li><a href="#union">메이플 유니온</a></li>
