--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<p>목표치를 정하고 자동으로 강화를 합니다.<br>
 		소모 메소량을 대략적으로 알 수 있고, 동일한 목표치를 갖고 강화한 25000개 아이템의 통계와 비교해서 대략적인 운세의 급을 알 수 있습니다.<br>
   오늘의 강화운세를 점쳐보기 좋습니다.</p>
-  <button type="button" class="btn btn-dark btn-lg" onclick="window.location.href='#starforce'">하러가기</button>
+  <button type="button" class="btn btn-dark btn-lg" onclick="retsim()">하러가기</button>
 		<h2 class="page-header">수동강화 시뮬레이터란?</h2>
 		<p>인게임처럼 한 땀 한 땀 열심히 강화를 합니다.<br>
     강화는 하고싶은데 메소가 없을 때, 혹은 강화가 너무 하고싶어서 현실을 깨달아야 할 때 쓰면 좋습니다.<br></p>
