--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
     <input type ="radio" id="sfpc02" name="pc" value=0.05>PC방 할인 적용
     </label>
   </div>
+  <br>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="nologs" name="nologs">
+    <label class="form-check-label" for="nologs">로그 보지 않음(속도 향상)</label>
+  </div>
       <br><br><button type="button" class="btn btn-dark btn-lg" onclick="starforce()">강화 시작</button>
 			</form>
 		</div>
