--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="modal-body">
 		<img src=0face.gif>
 		<p>나는 Croa의 영을 기르는 순두 왕 이다.</p>
-    <p>나는 Star 힘의 가상 사이트를 제작. gall에서 좋은 평가 받다.</p>
+    <p>나는 Star 힘의 가상 사이트를 제작. Gall에서 좋은 평가 받다.</p>
     <p>하지만 단풍잎 gall하는 불만이 또 있어요?</p>
     <p>이 page는 가상의 enhancement 목적으로 만들어지다. 실제의 재현 목적이 아닙니다.</p>
     <p>Maple heroes 실제의 강화를 원합니까?why? 당신의 Item 투명한으로 대체되었다.</p>
@@ -126,7 +126,7 @@
         <input type ="radio" id="sfpr01" name="prot" value=0 checked>상특)노파방
       </label>
       <label class="btn btn-dark">
-      <input type ="radio" id="sfpr02" name="prot" value=1>올 파괴방지
+      <input type ="radio" id="sfpr02" name="prot" value=1>12~16 파괴방지
       </label>
       <label class="btn btn-dark">
       <input type ="radio" id="sfpr03" name="prot" value=2>15,16 파괴방지
