--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="modal-body">
 		<img src=0face.gif>
 		<p>나는 Croa의 영을 기르는 순두 왕 이다.</p>
-    <p>나는 Star 힘의 가상 사이트를 제작. gall에서 좋은 평가 받다.</p>
+    <p>나는 Star 힘의 가상 사이트를 제작. Gall에서 좋은 평가 받다.</p>
     <p>하지만 단풍잎 gall하는 불만이 또 있어요?</p>
     <p>이 page는 가상의 enhancement 목적으로 만들어지다. 실제의 재현 목적이 아닙니다.</p>
     <p>Maple heroes 실제의 강화를 원합니까?why? 당신의 Item 투명한으로 대체되었다.</p>
