--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <button type="button" class="btn btn-dark btn-lg" onclick="retsim()">하러가기</button>
     <h2  class="page-header">주흔작 시뮬레이터란?</h2>
     <p>주문의 흔적을 사용해서 자동으로 강화를 합니다.<br>
-    소모 주흔갯수 빛 순백, 이노 갯수를 보여 주고, 동일한 목표치를 갖고 강화한 100000만개 아이템의 통계와 비교해서 대략적인 운세의 급을 알 수 있습니다.<br>
+    소모 주흔갯수 빛 순백, 이노 갯수를 보여 주고, 동일한 목표치를 갖고 강화한 100000개 아이템의 통계와 비교해서 대략적인 운세의 급을 알 수 있습니다.<br>
   오늘의 강화운세를 점쳐볼 수 있지만 스타포스보다 편차가 덜해서 임팩트는 좀 적습니다.</p>
     <button type="button" class="btn btn-dark btn-lg" onclick="retst()">하러가기</button>
     <h2  class="page-header">수동강화기란?</h2>
