--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+e﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -43,18 +43,13 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 		</button>
-        <h4 class="modal-title" id="myModalLabel">안녕하세요. Maple Heroes.</h4>
+        <h4 class="modal-title" id="myModalLabel">안녕하세요.</h4>
 		</div>
 		<div class="modal-body">
 		<img src=0face.gif>
-		<p>나는 Croa의 영을 기르는 순두 왕 이다.</p>
-    <p>나는 Star 힘의 가상 사이트를 제작. gall에서 좋은 평가 받다.</p>
-    <p>하지만 단풍잎 gall하는 불만이 또 있어요?</p>
-    <p>이 page는 가상의 enhancement 목적으로 만들어지다. 실제의 재현 목적이 아닙니다.</p>
-    <p>Maple heroes 실제의 강화를 원합니까?why? 당신의 Item 투명한으로 대체되었다.</p>
-    <p>real 강화를 원하면 Maple world로 오십시오. 그것은 당신의 money 흡수하다 and your 인생 too. 또한 coin 가게 무료로 지급됩니다.</p>
-    <p>항상 Maplestory를 사랑해주신 여러분 앞으로도 결제하십시오. and I also 일퀘좋아</p>
-    <p>Respectfully, 순두킹.</p>
+		<p>마스크 잘 쓰고 다닙시다.</p>
+		<p>우리는 이겨낼 수 있습니다. "카취 캅쉬다." We go together.</p>
+		<p>감사합니다.</p>
 		</div>
 		<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
