--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ e﻿<!DOCTYPE html>
         <h4 class="modal-title" id="myModalLabel">안녕하세요.</h4>
 		</div>
 		<div class="modal-body">
-		<img src=0face.gif>
+		<img src=MapleStory_NdEHM8mUaO.png>
 		<p>마스크 잘 쓰고 다닙시다.</p>
 		<p>우리는 이겨낼 수 있습니다. "카취 캅쉬다." We go together.</p>
-		<p>감사합니다.</p>
+		<p>Thank you. 감사합니다.</p>
 		</div>
 		<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
